# DesignPatterns

./: CMakeLists.txt
main/: CMakeLists.txt
main/inc/Demo/: demo_adapter.h  demo_bridge.h  demo_builder.h  demo_chain.h  demo_command.h  demo_composite.h  demo_decorator.h  demo_facade.h  demo_factory.h  demo_prototype.h  demo_proxy.h  demo_singleton.h
main/src/: demo_adapter.cpp  demo_bridge.cpp  demo_builder.cpp  demo_chain.cpp  demo_command.cpp  demo_composite.cpp  demo_decorator.cpp  demo_facade.cpp  demo_factory.cpp  demo_prototype.cpp  demo_proxy.cpp  demo_singleton.cpp  main.cpp
modelLib/: CMakeLists.txt
modelLib/inc/: stdafx.h
modelLib/inc/adapter_model/: adapter.h
modelLib/inc/bridge_model/: bridge.h
modelLib/inc/builder_model/: builder.h
modelLib/inc/chain_model/: chain.h  example_1.h
modelLib/inc/command_model/: command.h  example_1.h
modelLib/inc/composite_model/: composite.h
modelLib/inc/decorator_model/: decorator.h  example_1.h
modelLib/inc/facade_model/: facade.h
modelLib/inc/factory_model/: abstractFactory.h  normalFactory.h
modelLib/inc/flyweight_model/: flyweight.h
modelLib/inc/iterator_model/: iterator.h
modelLib/inc/prototype_model/: prototype.h
modelLib/inc/proxy_model/: proxy.h
modelLib/inc/singleton_model/: singleton.h
modelLib/src/: singleton.cpp
